CostalCloud/force-app/main/default/objects/InforDataDump__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNTID__c</fullName>
        <label>ACCOUNTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNTPRODUCTID__c</fullName>
        <label>ACCOUNTPRODUCTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDEDTOEIS__c</fullName>
        <label>ADDEDTOEIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDEDTOTCS__c</fullName>
        <label>ADDEDTOTCS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDKNOWLEDGE__c</fullName>
        <label>ADDKNOWLEDGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDL_LABOR__c</fullName>
        <label>ADDL_LABOR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALERTID__c</fullName>
        <label>ALERTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALERT__c</fullName>
        <label>ALERT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTERNATEKEYPREFIX__c</fullName>
        <label>ALTERNATEKEYPREFIX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTERNATEKEYSUFFIX__c</fullName>
        <label>ALTERNATEKEYSUFFIX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMOUNT__c</fullName>
        <label>AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AREA__c</fullName>
        <label>AREA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSIGNEDDATE__c</fullName>
        <label>ASSIGNEDDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSIGNEDTOID__c</fullName>
        <label>ASSIGNEDTOID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASIC_LABOR_AMT__c</fullName>
        <label>BASIC_LABOR_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDSJOBID__c</fullName>
        <label>BLINDSJOBID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDSPARENTJOBID__c</fullName>
        <label>BLINDSPARENTJOBID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT1_END__c</fullName>
        <label>BLINDS_APPOINTMENT1_END</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT1_START__c</fullName>
        <label>BLINDS_APPOINTMENT1_START</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT2_END__c</fullName>
        <label>BLINDS_APPOINTMENT2_END</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT2_START__c</fullName>
        <label>BLINDS_APPOINTMENT2_START</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT3_END__c</fullName>
        <label>BLINDS_APPOINTMENT3_END</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT3_START__c</fullName>
        <label>BLINDS_APPOINTMENT3_START</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLINDS_APPOINTMENT_ID__c</fullName>
        <label>BLINDS_APPOINTMENT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CANCELEDSTATUS__c</fullName>
        <label>CANCELEDSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CANCELEDSUBSTATUS__c</fullName>
        <label>CANCELEDSUBSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CANCELLED_DATE__c</fullName>
        <label>CANCELLED_DATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CATEGORY__c</fullName>
        <label>CATEGORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_AUTO_ATTACHED__c</fullName>
        <label>CA_AUTO_ATTACHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_RECEIVED__c</fullName>
        <label>CA_RECEIVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_SENT__c</fullName>
        <label>CA_SENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANGED_PO__c</fullName>
        <label>CHANGED_PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANGED__c</fullName>
        <label>CHANGED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANGEORDERNEEDED__c</fullName>
        <label>CHANGEORDERNEEDED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANGE_ORDER_ATTACHED__c</fullName>
        <label>CHANGE_ORDER_ATTACHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANGE_ORDER_DOC_ADDED__c</fullName>
        <label>CHANGE_ORDER_DOC_ADDED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGEBACKCREATED__c</fullName>
        <label>CHARGEBACKCREATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGEBACK__c</fullName>
        <label>CHARGEBACK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHO_CONTACTID__c</fullName>
        <label>CHO_CONTACTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSEDINSPN__c</fullName>
        <label>CLOSEDINSPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSEDONFIRST__c</fullName>
        <label>CLOSEDONFIRST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSED__c</fullName>
        <label>CLOSED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPLETEDBYID__c</fullName>
        <label>COMPLETEDBYID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPLETEDDATE__c</fullName>
        <label>COMPLETEDDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPLETION_LINK__c</fullName>
        <label>COMPLETION_LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACTID__c</fullName>
        <label>CONTACTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTAINEDHOMEJOB__c</fullName>
        <label>CONTAINEDHOMEJOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACTID__c</fullName>
        <label>CONTRACTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATEDATE__c</fullName>
        <label>CREATEDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATESOURCE__c</fullName>
        <label>CREATESOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATEUSER__c</fullName>
        <label>CREATEUSER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMERID__c</fullName>
        <label>CUSTOMERID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_BALANCE__c</fullName>
        <label>CUSTOMER_BALANCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_NOT_REQUIRED__c</fullName>
        <label>CUSTOMER_NOT_REQUIRED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOM_LABOR_AMT__c</fullName>
        <label>CUSTOM_LABOR_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOM_LABOR_PCT__c</fullName>
        <label>CUSTOM_LABOR_PCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATA_CLIENT__c</fullName>
        <label>DATA_CLIENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAYS_SCHEDULED_OUT__c</fullName>
        <label>DAYS_SCHEDULED_OUT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDRSTATUS__c</fullName>
        <label>DDRSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELIVERY_NEEDED__c</fullName>
        <label>DELIVERY_NEEDED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCAM__c</fullName>
        <label>DRCAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTS__c</fullName>
        <label>DTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DURATION__c</fullName>
        <label>DURATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPORT_DATE__c</fullName>
        <label>EXPORT_DATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTERNALID__c</fullName>
        <label>EXTERNALID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTERNALSCHEDULEDDATEALERT__c</fullName>
        <label>EXTERNALSCHEDULEDDATEALERT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTERNALSCHEDULEDDATE__c</fullName>
        <label>EXTERNALSCHEDULEDDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTERNAL_MASTER_WOID__c</fullName>
        <label>EXTERNAL_MASTER_WOID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIELDMANAGERID__c</fullName>
        <label>FIELDMANAGERID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRST__c</fullName>
        <label>FIRST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDMS_MEASURED__c</fullName>
        <label>HDMS_MEASURED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDMS_MEASURE_ATTACHED__c</fullName>
        <label>HDMS_MEASURE_ATTACHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDMS_MEASURE_DATE__c</fullName>
        <label>HDMS_MEASURE_DATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDMS_MEASURE_ERROR__c</fullName>
        <label>HDMS_MEASURE_ERROR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDMS_MEASURE_NUMBER__c</fullName>
        <label>HDMS_MEASURE_NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HELDSTATUS__c</fullName>
        <label>HELDSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HELDSUBSTATUS__c</fullName>
        <label>HELDSUBSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPORTSOURCE__c</fullName>
        <label>IMPORTSOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INCIDENTUSED__c</fullName>
        <label>INCIDENTUSED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTALLATION_LABOR_AMT__c</fullName>
        <label>INSTALLATION_LABOR_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTALLATION_LABOR__c</fullName>
        <label>INSTALLATION_LABOR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTALLERYHB__c</fullName>
        <label>INSTALLERYHB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTALLER_AMOUNT__c</fullName>
        <label>INSTALLER_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTALL__c</fullName>
        <label>INSTALL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTEGRATIONERROR__c</fullName>
        <label>INTEGRATIONERROR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNALYHB__c</fullName>
        <label>INTERNALYHB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVALID__c</fullName>
        <label>INVALID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_STORAGE__c</fullName>
        <label>IN_STORAGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISREADY__c</fullName>
        <label>ISREADY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISSUE__c</fullName>
        <label>ISSUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_GO_BACK__c</fullName>
        <label>IS_GO_BACK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOBSITE_ADDRESSID__c</fullName>
        <label>JOBSITE_ADDRESSID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOBSKU__c</fullName>
        <label>JOBSKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOBTYPEID__c</fullName>
        <label>JOBTYPEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEYRECDDATE__c</fullName>
        <label>KEYRECDDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEYRECD__c</fullName>
        <label>KEYRECD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEYRECNUMBER__c</fullName>
        <label>KEYRECNUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADPAINTFOUNDTYPE__c</fullName>
        <label>LEADPAINTFOUNDTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADPAINTFOUND__c</fullName>
        <label>LEADPAINTFOUND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADPAINTPACKETDATE__c</fullName>
        <label>LEADPAINTPACKETDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADPAINTRECEIPT__c</fullName>
        <label>LEADPAINTRECEIPT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADPAINTTESTCOMPLETED__c</fullName>
        <label>LEADPAINTTESTCOMPLETED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADPAINTTESTFORMATTACHED__c</fullName>
        <label>LEADPAINTTESTFORMATTACHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOST_JOB__c</fullName>
        <label>LOST_JOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSWPCOVEREDONRELATEDPO__c</fullName>
        <label>LSWPCOVEREDONRELATEDPO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE_ATTACHED__c</fullName>
        <label>LTE_ATTACHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANUAL_AMOUNT__c</fullName>
        <label>MANUAL_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANUAL_PAYMENT_TYPE__c</fullName>
        <label>MANUAL_PAYMENT_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARKETING_FEE__c</fullName>
        <label>MARKETING_FEE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_EXPORTDATE__c</fullName>
        <label>MAS_EXPORTDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIALS_AMOUNT__c</fullName>
        <label>MATERIALS_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MERCHANDISE_AMT__c</fullName>
        <label>MERCHANDISE_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODIFYDATE__c</fullName>
        <label>MODIFYDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODIFYUSER__c</fullName>
        <label>MODIFYUSER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEEDEDBYDATE__c</fullName>
        <label>NEEDEDBYDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEEDED_DATE__c</fullName>
        <label>NEEDED_DATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOBIDMEASURE__c</fullName>
        <label>NOBIDMEASURE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTES__c</fullName>
        <label>NOTES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTIFYMESSAGE_LINK__c</fullName>
        <label>NOTIFYMESSAGE_LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NO_RTS_REQUIRED__c</fullName>
        <label>NO_RTS_REQUIRED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDSTATUS__c</fullName>
        <label>OLDSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDSUBSTATUS__c</fullName>
        <label>OLDSUBSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPTION_LABOR_AMT__c</fullName>
        <label>OPTION_LABOR_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUM__c</fullName>
        <label>ORDER_NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTHER_MERCHANDISE_AMT__c</fullName>
        <label>OTHER_MERCHANDISE_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTHER_SERVICES_AMT__c</fullName>
        <label>OTHER_SERVICES_AMT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERMITNUMBER__c</fullName>
        <label>PERMITNUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERMIT_REQUIRED__c</fullName>
        <label>PERMIT_REQUIRED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIORITY__c</fullName>
        <label>PRIORITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUBLICACCESSCODE__c</fullName>
        <label>PUBLICACCESSCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURCHASEORDERID__c</fullName>
        <label>PURCHASEORDERID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PU_READY__c</fullName>
        <label>PU_READY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RATE_OVERRIDE__c</fullName>
        <label>RATE_OVERRIDE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RATE__c</fullName>
        <label>RATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>READY_TO_EXPORT__c</fullName>
        <label>READY_TO_EXPORT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECEIVEDBYID__c</fullName>
        <label>RECEIVEDBYID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECEIVEDDATE__c</fullName>
        <label>RECEIVEDDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REDUCE_PO_ATTACHED__c</fullName>
        <label>REDUCE_PO_ATTACHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REDUCE_PO_NEEDED__c</fullName>
        <label>REDUCE_PO_NEEDED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF_NUM__c</fullName>
        <label>REF_NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESENT_CA__c</fullName>
        <label>RESENT_CA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETAIL_AMOUNT__c</fullName>
        <label>RETAIL_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_CB_AMOUNT__c</fullName>
        <label>RFI_CB_AMOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRPINSTALLSENTTOCUSTOMER__c</fullName>
        <label>RRPINSTALLSENTTOCUSTOMER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRPSENTTOCUSTOMER__c</fullName>
        <label>RRPSENTTOCUSTOMER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULEDBY__c</fullName>
        <label>SCHEDULEDBY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULEDDATEUTCOFFSET__c</fullName>
        <label>SCHEDULEDDATEUTCOFFSET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULEDDATE__c</fullName>
        <label>SCHEDULEDDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULEDINSPN__c</fullName>
        <label>SCHEDULEDINSPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULEDON__c</fullName>
        <label>SCHEDULEDON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULED_BY_NAME__c</fullName>
        <label>SCHEDULED_BY_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECCODEID__c</fullName>
        <label>SECCODEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEND_CA_ERROR__c</fullName>
        <label>SEND_CA_ERROR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIALORDERSTATUS__c</fullName>
        <label>SPECIALORDERSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIALORDERSUBSTATUS__c</fullName>
        <label>SPECIALORDERSUBSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_INSTRUCTIONS__c</fullName>
        <label>SPECIAL_INSTRUCTIONS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_ORDER_DATE__c</fullName>
        <label>SPECIAL_ORDER_DATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_ORDER_RECEIVED__c</fullName>
        <label>SPECIAL_ORDER_RECEIVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_ORDER__c</fullName>
        <label>SPECIAL_ORDER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STANDARDPROBLEMID__c</fullName>
        <label>STANDARDPROBLEMID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STANDARDSOLUTIONID__c</fullName>
        <label>STANDARDSOLUTIONID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUSCODE__c</fullName>
        <label>STATUSCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUSDATE__c</fullName>
        <label>STATUSDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUSREASON__c</fullName>
        <label>STATUSREASON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STORE_ACCOUNTID__c</fullName>
        <label>STORE_ACCOUNTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STORE_CANCELED__c</fullName>
        <label>STORE_CANCELED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STORE_KEYRECD_DATE__c</fullName>
        <label>STORE_KEYRECD_DATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STORE_KEYRECD__c</fullName>
        <label>STORE_KEYRECD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBJECT__c</fullName>
        <label>SUBJECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBMITSEARCH__c</fullName>
        <label>SUBMITSEARCH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBSTATUS__c</fullName>
        <label>SUBSTATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledTime__c</fullName>
        <label>ScheduledTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TICKETID__c</fullName>
        <label>﻿TICKETID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TICKETNUMBER__c</fullName>
        <label>TICKETNUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIP_CHARGE__c</fullName>
        <label>TRIP_CHARGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIP__c</fullName>
        <label>TRIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URGENCYCODE__c</fullName>
        <label>URGENCYCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URGENCYID__c</fullName>
        <label>URGENCYID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USERFIELD10__c</fullName>
        <label>USERFIELD10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USERFIELD1__c</fullName>
        <label>USERFIELD1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USERFIELD2__c</fullName>
        <label>USERFIELD2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIACODE__c</fullName>
        <label>VIACODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_COMMENT_CATEGORY__c</fullName>
        <label>VOC_COMMENT_CATEGORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_GENERAL_COMMENTS__c</fullName>
        <label>VOC_GENERAL_COMMENTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_INSTALLER_OTHER_COMMENTS__c</fullName>
        <label>VOC_INSTALLER_OTHER_COMMENTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_INSTALL_ARRIVED_ON_TIME__c</fullName>
        <label>VOC_INSTALL_ARRIVED_ON_TIME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_INSTALL_AVAILABLE__c</fullName>
        <label>VOC_INSTALL_AVAILABLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_INSTALL_COMPLETE_ON_TIME__c</fullName>
        <label>VOC_INSTALL_COMPLETE_ON_TIME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_INSTALL_CORRECT__c</fullName>
        <label>VOC_INSTALL_CORRECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_INSTALL_JOBSITE_CLEAN_UP__c</fullName>
        <label>VOC_INSTALL_JOBSITE_CLEAN_UP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_IVOC__c</fullName>
        <label>VOC_IVOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_MEASURE_VOC__c</fullName>
        <label>VOC_MEASURE_VOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_OSAT__c</fullName>
        <label>VOC_OSAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_OVERTURNED__c</fullName>
        <label>VOC_OVERTURNED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_RESPONSEDATE__c</fullName>
        <label>VOC_RESPONSEDATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_RFI_NOTES__c</fullName>
        <label>VOC_RFI_NOTES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_SCORE_DATE_RECEIVED__c</fullName>
        <label>VOC_SCORE_DATE_RECEIVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_SCORE__c</fullName>
        <label>VOC_SCORE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_STORE_KNOWLEDGE__c</fullName>
        <label>VOC_STORE_KNOWLEDGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEB_LINK__c</fullName>
        <label>WEB_LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEIGHTCODE__c</fullName>
        <label>WEIGHTCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARHOMEBUILTDISCREPANCY__c</fullName>
        <label>YEARHOMEBUILTDISCREPANCY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARHOMEBUILTLOOKUP__c</fullName>
        <label>YEARHOMEBUILTLOOKUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARHOMEBUILT__c</fullName>
        <label>YEARHOMEBUILT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZILLOWUPDATED__c</fullName>
        <label>ZILLOWUPDATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>InforDataDump</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TICKETID__c</columns>
        <columns>ACCOUNTID__c</columns>
        <columns>URGENCYCODE__c</columns>
        <columns>STANDARDSOLUTIONID__c</columns>
        <columns>CONTRACTID__c</columns>
        <columns>STANDARDPROBLEMID__c</columns>
        <columns>RECEIVEDDATE__c</columns>
        <columns>RECEIVEDBYID__c</columns>
        <columns>WEIGHTCODE__c</columns>
        <columns>PRIORITY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>InforDataDump</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InforDataDump</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>