CostalCloud/force-app/main/default/objects/InforDataDump__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TICKETID__c</columns>
    <columns>ACCOUNTID__c</columns>
    <columns>URGENCYCODE__c</columns>
    <columns>STANDARDSOLUTIONID__c</columns>
    <columns>CONTRACTID__c</columns>
    <columns>STANDARDPROBLEMID__c</columns>
    <columns>RECEIVEDDATE__c</columns>
    <columns>RECEIVEDBYID__c</columns>
    <columns>WEIGHTCODE__c</columns>
    <columns>PRIORITY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>